tests/src/frontend/syntax/invalid/empty_block.sk
fun f(): void { }

fun main(): String {
  "Fail"
}
